    with the "id" and "class" values of the list node.

  - Use dpub-ARIA role "doc-footnote" (instead of ARIA role "note")
    for footnotes.

* docutils/writers/latex2e/__init__.py

  - Do not insert ``\usepackage[utf8]{inputenc}`` into UTF-8 encoded
    LaTeX sources. UTF-8 is the default encoding for LaTeX2e since 2018.
  - Fix handling of the "use_bibtex" setting.
  - Use POSIX paths in stylesheet loading macros [report Alan G. Isaac].

* docutils/writers/latex2e/titlepage.tex

  - Drop ``\usepackage{fixltx2e}`` from template. (Obsolete since 2015
    and dropped from other templates in Docutils 0.14.)

* docutils/writers/manpage.py

  - Do not output empty "manual" in ``.TH``

* docutils/writers/xetex/__init__.py

  - Ignore settings in the [latex2e writer] configuration file section.

* setup.py

  - Fix SetuptoolsDeprecationWarning: ``Installing '' as data is deprecated``
    by adding data directories to package_data.packages list.

* tox.ini

  - Extracted flake8 configuration and moved to ``.flake8``.

* test/

  - Refactored tests to use common `unittest` idioms.
    Fixes errors when running the test suite with ``python -m unittest``
    or external test frameworks, such as Pytest_.

  .. _pytest: https://pypi.org/project/pytest/

* test/coverage.sh

  - Removed. Use the coverage.py_ project instead,
    ``coverage run test/alltests.py`` and ``coverage report``.

  .. _coverage.py: https://pypi.org/project/coverage/

* tools/

  - Moved ``quicktest.py`` to ``tools/dev/``.


Release 0.19 (2022-07-05)
=========================

* General

  - Dropped support for Python 2.7, 3.5, and 3.6. and removed compatibility
    hacks from code and tests.
  - Code cleanup,
    check PEP 8 conformity with `flake8` (exceptions in file tox.ini).

* docutils/__main__.py

  - New module. Support for ``python -m docutils``.
    Also used for the ``docutils`` console script `entry point`_.

* docutils/core.py
